fixed scrolling on mobile

--- a/src/App/AppWrapper/AppWrapper.css
+++ b/src/App/AppWrapper/AppWrapper.css
@@ -4,4 +4,5 @@
     background-color: #fdfdfd;
     max-height: 95vh;
     overflow: hidden;
+    touch-action: none;
   }
