--- a/src/App/AppWrapper/EntryContainer/Entry/Entry.css
+++ b/src/App/AppWrapper/EntryContainer/Entry/Entry.css
@@ -7,6 +7,7 @@
     float: right;
     cursor: grab;
     color: #888;
+    touch-action: none;
   }
   
   @media only screen and (max-width: 600px) {
@@ -32,7 +33,7 @@
   .Entry-last-in-list {
     border: 0;
   }
-  
+
   .Entry:hover {
     background-color: #eee;
   }
