--- a/src/App/AppWrapper/EntryContainer/EntryContainer.css
+++ b/src/App/AppWrapper/EntryContainer/EntryContainer.css
@@ -1,7 +1,8 @@
 .EntryContainer {
     max-height: calc(100vh - 175px);
     overflow-y: auto;
-    touch-action: none;
+    /* touch-action: none; */
+    scrollbar-width: thin;
 }
 
 .fade-enter {
